# fogged-app

./: .gitignore  LICENSE.md  Makefile  README.md  analysis_options.yaml  appcast.xml  pubspec.yaml
.github/workflows/: add_signed_microsft.yml  build-all.yml  build-android.yml  build-apps.yml  build.yml  ci.yml  release.yml  stale.yml  winget.yml
android/app/: build.gradle  build.gradle.kts
assets/translations/: ar.i18n.json  en.i18n.json  es.i18n.json  fa.i18n.json  fr.i18n.json  id.i18n.json  pt-BR.i18n.json  ru.i18n.json  tr.i18n.json  zh-CN.i18n.json  zh-TW.i18n.json
installers/windows/: installer.iss
ios/: Base.xcconfig  exportOptions.plist
ios/HiddifyPacketTunnel/SingBox/: Extension+RunBlocking.swift  ExtensionPlatformInterface.swift  ExtensionProvider.swift
ios/Local Packages/: Package.swift
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/Shared/: CommandClient.swift
lib/: bootstrap.dart  main.dart  main.dart.bak2  main_prod.dart
lib/core/db/: db.dart
lib/foggedcore/: fogged_core_service.dart  hiddify_core_service_provider.dart  init_signal.dart
lib/l10n/: strings.dart
lib/models/: vpn_server.dart
lib/screens/: settings_screen.dart
lib/services/: decoy_traffic.dart  vpn_config.dart
lib/utils/: custom_text_form_field.dart  link_parsers.dart  mutation_state.dart  sentry_utils.dart  uri_utils.dart
lib/widgets/: error_dialog.dart  grid_painter.dart  update_dialog.dart
linux/: CMakeLists.txt  my_application.cc
linux/packaging/: app.hiddify.com.appdata.xml
linux/runner/: my_application.cc
macos/Runner/: AppDelegate.swift  Info.plist  MainFlutterWindow.swift  Release.entitlements
macos/Runner.xcodeproj/: project.pbxproj
orcax/: Cargo.toml
orcax/client/: Cargo.toml
orcax/client/src/: brutal.rs  lib.rs  main.rs  tunnel.rs  whitelist.rs
orcax/protocol/: Cargo.toml
orcax/protocol/src/: addons.rs  address.rs  lib.rs  mux.rs  orca.rs  vless.rs
orcax/transport/: Cargo.toml
orcax/transport/src/: client_hello.rs  handshake.rs  lib.rs  reality.rs  reality_cert.rs  server.rs  tls_record.rs  vision.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: BUILD.md  CMakeLists.txt  installer.iss
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  flutter_window.cpp  main.cpp
(+277 files in other folders)
