[package]
name = "orcax-client"
version = "0.1.0"
edition = "2021"
description = "OrcaX Pro Max client library — connects to OrcaX servers, handles Passthrough"

[lib]
name = "orcax_client"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "orcax-connect"
path = "src/main.rs"

[dependencies]
orcax-protocol = { path = "../protocol" }
orcax-transport = { path = "../transport" }
anyhow = "1"
rustls = "0.22"
rustls-pki-types = "1"
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand = "0.8"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
socket2 = "0.5"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.25"
futures = "0.3"
quinn = { version = "0.11", features = ["rustls-aws-lc-rs"] }
quinn-proto = "0.11"
rcgen = "0.13"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
url = "2"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
ipnet = "2"
